<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>arina</groupId>
	<artifactId>arina</artifactId>
	<packaging>pom</packaging>
	<version>8.0</version>
	<name>arina</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<jackson.version>2.9.9</jackson.version>
		<commons-io.version>2.6</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<spring.version>5.3.27</spring.version>
		<camel.version>3.20.5</camel.version>
		<jakarta.version>2.3.3</jakarta.version>
	</properties>

	<modules>
		<module>arina-maplab</module>
		<module>camel-arina-maplab</module>
	</modules>
</project>
